WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220759
REGRESSION (
r271508
) Scrolling is no longer smooth
https://bugs.webkit.org/show_bug.cgi?id=220759
Summary
REGRESSION (r271508) Scrolling is no longer smooth
Simon Fraser (smfr)
Reported
2021-01-19 18:41:01 PST
REGRESSION (
r271508
) Scrolling is no longer smooth
Attachments
Patch
(1.72 KB, patch)
2021-01-19 18:41 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-01-19 18:41:58 PST
Created
attachment 417936
[details]
Patch
Darin Adler
Comment 2
2021-01-19 19:08:15 PST
Comment on
attachment 417936
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=417936&action=review
> Source/WebCore/ChangeLog:9 > +
r271508
has a logic error that resulted in no scrolling thread layer commits, which meant that > + scrolling on pages with a busy main thread only updated layers at main thread cadence.
Is a regression test possible?
Simon Fraser (smfr)
Comment 3
2021-01-19 21:07:23 PST
I'd have to write a bunch of infrastructure to test this (count layer commits on the scrolling thread).
EWS
Comment 4
2021-01-19 21:23:12 PST
Committed
r271637
: <
https://trac.webkit.org/changeset/271637
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417936
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-01-19 21:24:14 PST
<
rdar://problem/73388312
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug