REGRESSION (r271508) Scrolling is no longer smooth https://bugs.webkit.org/show_bug.cgi?id=220759

Reviewed by Sam Weinig.

r271508 has a logic error that resulted in no scrolling thread layer commits, which meant that
scrolling on pages with a busy main thread only updated layers at main thread cadence.

* page/scrolling/ThreadedScrollingTree.cpp:
(WebCore::ThreadedScrollingTree::canUpdateLayersOnScrollingThread const):


Canonical link: https://commits.webkit.org/233163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271637 268f45cc-cd09-0410-ab3c-d52691b4dbfc